--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.3",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.14.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
