--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
     "emoji-picker-react": "^4.4.7",
+    "emojis": "^1.0.10",
     "firebase": "^9.14.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
